deploy/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: car-demo
  name: car-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: car-demo
    spec:
      containers:
      - image: fullaware/car_demo
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        name: car-demo
