deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-demo
  namespace: car-demo
spec:
  rules:
  - host: car-demo.home.fullaware.net
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: car-demo
              port:
                number: 8080
